# sros-project

./: .aider.conf.yml  .clineignore  .clinerules  .env.example  .env.langfuse.example  .gitignore  .roomodes  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DEVELOPMENT_STATUS.md  Dockerfile  GEMINI.md  Makefile  QUICKSTART_LANGFUSE.md  README.md  README_zh.md  ROADMAP.md  SROS_ARCHITECTURE_REFACTORING_COMPLETED.md  SROS_PROJECT_PROGRESS.md  SYSTEM_PROGRESS.md  TESTING.md  VERIFICATION_PHASE_4.1.md  aider_model_metadata.json  arc_wiki.json  check_mock_usage.py  check_unpywall.py  debug_mcp_client.py  docker-compose-dev.yml  docker-compose-dev.yml.bak  docker-compose.yml  end_to_end_tests.py  error_log.txt  implementation_roadmap.md  instructions_document_store.txt  instructions_document_store_v2.txt  instructions_llm.txt  manual_test_costorm.py  openapi.yaml  performance_tests.py  (+13 more)
.ai-conventions/: 01_workflow.md  02_prompt_snippets.md
.ai-sessions/: README.md  debug_e2e_http_500_error.md
.devcontainer/: README.md  devcontainer.json  devcontainer.json.backend
.github/: copilot-instructions.md
.roo/: .roomodes  mcp.json
.sros/: graph.db  graph.db.wal
.test_cache/: test.db
backend/: API_DOCUMENTATION.md  Dockerfile.aider  Dockerfile.dev  Dockerfile.prod  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  test_langfuse_connection.py  unpaywall_cache
doc/: AI 辅助开发框架 2.1：基于 GEMINI.md 的可观测性驱动开发.md  AI 辅助开发框架 3.0：现场快照驱动的调试.md  AI 辅助开发飞轮.md  AI-Native 自主开发系统架构蓝皮书v1.1.md  ARCHITECTURE_V2_ROO_MCP.md  Aider_MCP_Container_Guide.md  Cline (v3.51.0+) 迁移与全自动化实战手册.md  DEBUGGING_STRATEGY.md  DEPLOYMENT.md  DEVELOPMENT_STRATEGY.md  ENVIRONMENT_CONFIGURATION_UPDATE_SUMMARY.md  LangChain 学术工具解析指南.md  MCP 平台多场景科研升级规划.md  MCP_Strategy_Analysis.md  NEXT_STEPS_SUMMARY.md  OPERATION_ASYNC_STABILITY_COMPLETION.md  PHASE2_BACKEND_INTEGRATION_PLAN.md  PHASE2_DEBUG_GUIDE.md  PHASE2_INDEX.md  PHASE2_INTEGRATION_SUMMARY.md  PHASE2_QUICK_REFERENCE.md  PHASE2_TODO.md  PHASE2_WEEK1_COMPLETION_SUMMARY.md  PHASE3_WEBSOCKET_SUMMARY.md  PHASE_3.5.2_TESTING_GUIDE.md  PHASE_3.5_QUICK_REFERENCE.md  PHASE_4.1_MPA_EXECUTION_PLAN.md  PRD_SXMU_Data_Ingestion_HPC.md  README.md  Roo Code 与科研自动化操作系统 V2.0 (SROS) 融合实施方案.md  RooCode_SROS V2.0 架构选型.md  SESSION_DETAILS_API_EXAMPLES.md  SESSION_DETAILS_VIEW_USER_GUIDE.md  SROS Architecture Refactoring Plan.md  SROS CLI 架构与交互规范：面向 HPC 与大模型的双向桥梁.md  SROS V2.2 架构实施总蓝图.md  SROS V3.0-Beta 进展分析与端到端测试指南.md  SROS V4.0 Phase 1: 文献与知识合成闭环 MVP 测试指南.md  SROS 与 ARC 生态大一统：异构工具纳管与大规模数据基座架构战略.md  SROS 端到端 MVP 与可视化界面需求深度分析.md  (+29 more)
docs/: DevX-GitHub-Branch-Protection.md  DevX-Systemd-Bridge-Setup.md  PRD.md  architecture.md  code_schema.md
examples/: env_config_example.py
frontend/: package-lock.json
legacy_v1_archive/: docker-compose-dev.yml
mcp_servers/: README.md
plans/: sros_cli_commands_spec.md  sros_directory_structure_design.md  sros_migration_strategy.md  sros_package_structure_spec.md  sros_v22_implementation_plan.md  sros_v23_cli_implementation_plan.md  sros_v23_implementation_summary.md  sros_v30_implementation_plan.md  sros_v40_phase1_tdd_plan.md
scripts/: claude_code_mvp_checklist.sh  create-module.sh  debug_mcp_client.py  export_requirements.py  final_verification.py  inspector_check.py  list-models.sh  reset_db.sh  setup_langfuse.sh  smoke_test.py  test-analytics-api.sh  test-extension-api.sh  test-phase3-websocket.sh  test-phase3.5.2.sh  test-websocket-stream.sh  test-week1-day1-fixed.sh  test-week1-day1.sh  test-ws-quick.py  test_phase_5_mcp_integration.sh  test_research_agent.sh  verify-phase3-implementation.sh  verify_openalex_live.py  verify_production.py
sros-sdk/: README.md  pyproject.toml
sros-sdk/examples/: sxmu_mdd_dtms_e2e.ipynb
sros-sdk/src/sros/: __init__.py
sros-sdk/src/sros/brain/: __init__.py  dataset.py
sros-sdk/src/sros/data/: __init__.py  duckdb.py
sros-sdk/src/sros/dspy/: __init__.py  assertions.py
sros-sdk/src/sros/ml/: __init__.py  trainer.py
sros-sdk/tests/: test_brain_dataset.py  test_dsl6_e2e.py  test_duckdb_connector.py  test_trainer.py
(+876 files in other folders)
